2010-01-17  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        [check-webkit-style] qt unit testing false positives
        https://bugs.webkit.org/show_bug.cgi?id=32833

        Exempt the Qt API and unit tests from the style checker.

        * Scripts/webkitpy/style/cpp_style.py:
        * Scripts/webkitpy/style/cpp_style_unittest.py:

2010-01-17  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        style-check script reports loads of errors on gtk2drawing.c
        https://bugs.webkit.org/show_bug.cgi?id=33771

        Exempt WebCore/platform/gtk/gtk2drawing.c and
        WebCore/platform/gtk/gtk2drawing.h from style checks.

        * Scripts/webkitpy/style/cpp_style.py:
        * Scripts/webkitpy/style/cpp_style_unittest.py:

2010-01-17  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Shinichiro Hamaji.

        Finished eliminating _cpp_style_state global state variable from
        check-webkit-style code and eliminating _CppStyleState class.

        https://bugs.webkit.org/show_bug.cgi?id=33764

        * Scripts/webkitpy/style/checker.py:
          - Minor updates caused by changes to cpp_style.py.

        * Scripts/webkitpy/style/cpp_style.py:
          - Removed _CppStyleState class.
          - Removed verbose_level functions.
          - Added verbosity as a parameter to _FunctionState constructor.
          - Added verbosity as a parameter to process_file().
          - Added verbosity as a parameter to process_file_data().

        * Scripts/webkitpy/style/cpp_style_unittest.py:
          - Added helper functions to set verbosity while running tests.

2010-01-17  Adam Barth  <abarth@webkit.org>

        Reviewed by Shinichiro Hamaji.

        check-webkit-style underscore check should be disabled for Qt methods starting with qt_
        https://bugs.webkit.org/show_bug.cgi?id=33663

        * Scripts/webkitpy/style/cpp_style.py:
        * Scripts/webkitpy/style/cpp_style_unittest.py:
