@@ -3018,7 +3018,9 @@ class WebKitStyleTest(CppStyleTestBase):
             '    doSomethingElseAgain();\n'
             '}\n',
             '')
-
+        self.assert_multi_line_lint(
+            '#define TEST_ASSERT(expression) do { if (!(expression)) { TestsController::shared().testFailed(__FILE__, __LINE__, #expression); return; } } while (0)\n',
+            '')
         self.assert_multi_line_lint(
             'if (condition) {\n'
             '    doSomething();\n'
