@@ -2,6 +2,18 @@
 
         Reviewed by Darin Adler.
 
+        style-queue complains about one-line macros that include multiple statements
+        https://bugs.webkit.org/show_bug.cgi?id=33173
+
+        Add an exception for multiple statements on a line that starts a macro.
+
+        * Scripts/webkitpy/style/cpp_style.py:
+        * Scripts/webkitpy/style/cpp_style_unittest.py:
+
+2010-01-17  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Darin Adler.
+
         [check-webkit-style] qt unit testing false positives
         https://bugs.webkit.org/show_bug.cgi?id=32833
 
